docker/manifests/mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localdb-mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
